# spectraldiffx

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  Makefile  README.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md  labeler.yml
.github/instructions/: python-coding.instructions.md
.github/workflows/: ci.yml  dependency-review.yml  label-pr.yml  lint.yml  pages.yml  pytest.yaml  release-please.yml  typecheck.yml
api/chebyshev/filters/: index.html
api/chebyshev/grids/: index.html
api/chebyshev/operators/: index.html
api/chebyshev/solvers/: index.html
api/fourier/capacitance/: index.html
api/fourier/eigenvalues/: index.html
api/fourier/filters/: index.html
api/fourier/grids/: index.html
api/fourier/operators/: index.html
api/fourier/solvers/: index.html
api/fourier/transforms/: index.html
api/spherical/filters/: index.html
api/spherical/grids/: index.html
api/spherical/harmonics/: index.html
api/spherical/operators/: index.html
api/spherical/solvers/: index.html
capacitance_guide/: index.html
docs/: capacitance_guide.md  elliptic_solvers_guide.md  index.md  installation.md  quickstart.md  transforms_guide.md
docs/api/chebyshev/: filters.md  grids.md  operators.md  solvers.md
docs/api/fourier/: capacitance.md  eigenvalues.md  filters.md  grids.md  operators.md  solvers.md  transforms.md
docs/api/spherical/: filters.md  grids.md  harmonics.md  operators.md  solvers.md
docs/theory/: capacitance.md  chebyshev.md  elliptic_solvers.md  fourier.md  index.md  spectral_transforms.md  spherical.md
elliptic_solvers_guide/: index.html
installation/: index.html
notebooks/: demo_1d.ipynb  demo_1d.py  demo_2d.ipynb  demo_2d.py  demo_capacitance.py  demo_elliptic_solvers.py  demo_qg.ipynb  demo_qg.py  eigenfunction_gallery.py  inhomogeneous_bcs.py  kdv.py  navier_stokes_2d.py  pseudospectral_part2.py  qg_model.py  solver_comparison.py  theory_figures.py
notebooks/demo_1d/: demo_1d.py  index.html
notebooks/demo_2d/: demo_2d.py  index.html
notebooks/demo_capacitance/: demo_capacitance.py  index.html
notebooks/demo_elliptic_solvers/: demo_elliptic_solvers.py  index.html
notebooks/demo_qg/: demo_qg.py  index.html
notebooks/eigenfunction_gallery/: index.html
notebooks/inhomogeneous_bcs/: index.html
notebooks/kdv/: index.html  kdv.py
notebooks/mixed_bc_solvers/: index.html  mixed_bc_solvers.py
notebooks/navier_stokes_2d/: index.html  navier_stokes_2d.py
notebooks/ps_vs_fd2_eigenvalues/: index.html  ps_vs_fd2_eigenvalues.py
notebooks/pseudospectral_part2/: index.html  pseudospectral_part2.py
notebooks/qg_model/: index.html  qg_model.py
notebooks/solver_comparison/: index.html  solver_comparison.py
quickstart/: index.html
scripts/: create_github_issues.sh  generate_docs_figures.py  kdv.py  navier_stokes_2d.py  qg_model.py
search/: search_index.json
spectraldiffx/: AGENTS.md  __init__.py
spectraldiffx/_src/: difference.py  filters.py  grid.py  operators.py  solvers.py  utils.py
spectraldiffx/_src/chebyshev/: __init__.py  filters.py  grid.py  operators.py  quadrature.py  solvers.py  transforms.py
spectraldiffx/_src/fourier/: __init__.py  capacitance.py  eigenvalues.py  grid.py  operators.py  solvers.py  transforms.py
spectraldiffx/_src/spherical/: __init__.py  filters.py  grid.py  harmonics.py  operators.py  solvers.py
tests/: conftest.py  test_chebyshev_filters.py  test_chebyshev_grid.py  test_chebyshev_new_features.py  test_chebyshev_operators.py  test_chebyshev_solvers.py  test_correctness.py  test_filters.py  test_fourier_capacitance.py  test_fourier_eigenvalues.py  test_fourier_mixed_bc_3d_solvers.py  test_fourier_mixed_bc_solvers.py  test_fourier_solvers.py  test_fourier_transforms.py  test_grid.py  test_inhomogeneous_bcs.py  test_missing_coverage.py  test_operators.py  test_physics_operators.py  test_ps_eigenvalues.py  test_release_please_config.py  test_simulation_sanity.py  test_solvers.py  test_spherical_filters.py  test_spherical_grid.py  test_spherical_harmonics.py  test_spherical_new_features.py  test_spherical_operators.py  test_spherical_solvers.py
theory/: index.html
theory/capacitance/: index.html
theory/chebyshev/: index.html
theory/elliptic_solvers/: index.html
theory/fourier/: index.html
theory/spectral_transforms/: index.html
theory/spherical/: index.html
transforms_guide/: index.html
