[project]
name = "spectraldiffx"
version = "0.0.1"
description = "Pre-, Geo-, and ML processing for ocean applications."
authors = [
    { name = "Juan Emmanuel Johnson", email = "jemanjohnson34@gmail.com" },
    { name = "Hugo Frezat", email = "hugo.frezat@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["PDEs", "Pseudospectral Difference", "jax"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "jaxtyping>=0.2.28",
    "beartype>=0.18.0",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "finitediffx>=0.1.0",
    "kernex>=0.2.0",
    "equinox",
]

[project.urls]
Repository = "https://github.com/jejjohnson/spectraldiffx"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-pretty>=1.2.0",
    "pytest-xdist>=3.5.0",
    "networkx>=3.2",
    "coverage>=7.4.0",
    "xdoctest>=1.1.3",
    "mktestdocs>=0.2.2",
]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "nbstripout>=0.7.1",
    "mypy>=1.13.0",
]
exp = [
    "wandb>=0.18.0",
    "loguru>=0.7.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "autoroot>=1.0.0",
]
jlab = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "autoroot>=1.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-git-authors-plugin>=0.9.0",
    "pymdown-extensions>=10.11",
    "pygments>=2.18.0",
    "mkdocs-bibtex>=2.16.0",
    "mdx-truly-sane-lists>=1.3",
    "linkify-it-py>=2.0.3",
    "ipython>=8.28.0",
    "ipykernel>=6.29.0",
    "watermark>=2.5.0",
    "jupytext>=1.16.0",
    "matplotlib>=3.9.0",
]
all = [
    "spectraldiffx[test,dev,exp,jlab,docs]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "spectraldiffx[dev,test]",
]

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["spectraldiffx"]
xfail_strict = true

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
exclude = ["docs/", "notebooks/"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "Q",      # flake8-quotes
    "PLE",    # pylint errors
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
    "PIE",    # misc lints
    "PYI",    # flake8-pyi
    "TID",    # tidy imports
    "ISC",    # implicit string concatenation
    "RUF",    # ruff-specific rules
]
ignore = [
    "E402",     # module level import not at top of file
    "E731",     # do not assign a lambda expression, use a def
    "E501",     # line too long (handled by formatter)
    "S101",     # use of assert
    "F722",     # syntax error in forward annotation
    "F821",     # undefined name (false positives with jaxtyping dimension annotations)
    "PLR2004",  # magic value comparison
    "PLR0913",  # too many arguments
    "ISC001",   # conflicts with formatter
    "RUF002",   # ambiguous unicode characters in docstrings (mathematical notation)
    "RUF046",   # int(round(...)) is intentional for type safety
    "PYI061",   # Literal[..., None] vs Literal[...] | None style preference
]
unfixable = ["ERA001", "F841", "T201", "T203"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["spectraldiffx"]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["name-defined"]  # jaxtyping dimension annotations trigger false positives
